Got the search queries to work

--- a/amazon-react/src/Header.css
+++ b/amazon-react/src/Header.css
@@ -28,11 +28,14 @@
     border: none;
     width: 100%;
 }
-
+.btn {
+    background-color: #cd9042;
+    height: 37px;
+    cursor: pointer;
+}
 .header__searchIcon {
     padding: 5px;
     height: 22px !important;
-    background-color: #cd9042;
 }
 
 .header__optionLineOne {
