--- a/amazon-react/src/Login.css
+++ b/amazon-react/src/Login.css
@@ -3,6 +3,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* https://pixabay.com/de/photos/roboter-figurine-spielzeug-4004669/ */
+    background-image: url(https://cdn.pixabay.com/photo/2019/02/18/15/19/robot-4004669_960_720.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .login__logo {
@@ -17,8 +21,9 @@
     display: flex;
     flex-direction: column;
     border-radius: 5px;
-    border: 1px solid lightgray;
+    border: 1px solid #000;
     padding: 20px;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .login__container > h1 {
