--- a/amazon-react/src/Header.css
+++ b/amazon-react/src/Header.css
@@ -3,10 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(0 42 99 / 0.8);
+    background-color: rgba(0 42 99 / 0.8);
     position: sticky;
     top: 0;
     z-index: 100;
+    background-attachment: fixed;
 }
 
 .header__logo {
