--- a/amazon-react/src/SearchProduct.css
+++ b/amazon-react/src/SearchProduct.css
@@ -1,19 +1,21 @@
-.checkoutProduct {
+.searchproduct {
     display: flex;
     margin: 20px 0;
+    background-color: white;
+    padding: 20px 0;
 }
- 
-.checkoutProduct__image {
+
+.searchProduct__image {
     object-fit: contain;
     width: 180px;
     height: 180px;
 }
 
-.checkoutProduct__info {
+.searchProduct__info {
     padding-left: 20px;
 }
 
-.checkoutProduct__info > button {
+.searchProduct__info > button {
     background: #f0c14b;
     border: 1px solid;
     margin-top: 10px;
@@ -21,11 +23,11 @@
     color: #111;
 }
 
-.checkoutProduct__title {
+.searchProduct__title {
     font-size: 17px;
     font-weight: 800;
 }
 
-.checkoutProduct__rating{
+.searchProduct__rating {
     display: flex;
 }
