Updated the product list and added ads on the home page

--- a/amazon-react/src/Footer.css
+++ b/amazon-react/src/Footer.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-content: center;
     padding: 40px 0;
-    background-color: #232F3E;
+    background-color: rgba(0 42 99 / 0.8);
 }
 
 .footer__listHeading {
