--- a/amazon-react/src/Home.css
+++ b/amazon-react/src/Home.css
@@ -19,3 +19,38 @@
     margin-bottom: -240px;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
+
+.home__ad {
+    width: 100%;
+    height: 350px;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: url('https://nscreenmedia.com/wp-content/uploads/170926-Amazon-Channels.png');
+}
+
+.home__adContainer {
+    display: flex;
+}
+
+.home__adRight {
+    width: 50%;
+    height: 300px;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('https://media-assets-02.thedrum.com/cache/images/thedrum-prod/s3-news-tmp-136742-s3-news-tmp-136742-mi-com-xiaomi-mi-a1-5_1508760333-2x1-940--2x1--940.jpg');
+}
+
+.home__adLeft {
+    width: 50%;
+    height: 300px;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('https://cdn.gsmarena.com/pics/14/11/gear-s-tv-ad/gsmarena_001.jpg');
+}
