Coded auto-complete functionality for the search field

--- a/amazon-react/src/Payment.css
+++ b/amazon-react/src/Payment.css
@@ -1,4 +1,7 @@
-.payment {
+
+
+.payment__container {
+    color: black;
     background-color: white;
 }
 
@@ -6,7 +9,6 @@
     text-align: center;
     padding: 10px;
     font-weight: 400;
-    background-color: rgb(234, 237,237);
     border-bottom: 1px solid lightgrey;
 }
 
