--- a/amazon-react/src/Checkout.css
+++ b/amazon-react/src/Checkout.css
@@ -1,13 +1,18 @@
 .checkout {
     display: flex;
     padding: 20px;
-    background-color: white;
+    background-color: #131921;
     height: max-content;
+    min-height: 70vh;
 }
 
 .checkout__ad {
     width: 100%;
     margin-bottom: 10px;
+}
+
+.checkout__text {
+    color: white;
 }
 
 .checkout__title {
