--- a/amazon-react/src/Header.css
+++ b/amazon-react/src/Header.css
@@ -19,12 +19,14 @@
 
 .header__searchContainer {
     width: 55%;
+    
 }
 
 .header__search {
     display: flex;
+    flex-direction: column;
     flex: 1;
-    align-items: center;
+    justify-content: flex-start;
     border-radius: 24px;
 }
 
@@ -34,6 +36,14 @@
     border: none;
     width: 100%;
 }
+
+.header__searchSuggestions {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+}
+
 .btn {
     background-color: #cd9042;
     height: 37px;
