--- a/amazon-react/src/Header.css
+++ b/amazon-react/src/Header.css
@@ -24,9 +24,8 @@
 
 .header__search {
     display: flex;
-    flex-direction: column;
     flex: 1;
-    justify-content: flex-start;
+    justify-content: center;
     border-radius: 24px;
 }
 
@@ -38,10 +37,18 @@
 }
 
 .header__searchSuggestions {
+    width: 50%;
+    cursor: pointer;
+    padding: 10px 10px;
+    border-radius: 5px;
     background-color: white;
     display: flex;
     flex-direction: column;
     position: absolute;
+}
+
+.header__searchSuggestions:hover {
+    background-color: rgb(238, 238, 238);
 }
 
 .btn {
