--- a/amazon-react/src/CheckoutProduct.css
+++ b/amazon-react/src/CheckoutProduct.css
@@ -1,6 +1,8 @@
 .checkoutProduct {
+    background-color: white;
     display: flex;
     margin: 20px 0;
+    padding: 15px 15px;
 }
  
 .checkoutProduct__image {
@@ -10,6 +12,7 @@
 }
 
 .checkoutProduct__info {
+    color: #000;
     padding-left: 20px;
 }
 
