--- a/amazon-react/src/Header.css
+++ b/amazon-react/src/Header.css
@@ -19,7 +19,7 @@
 
 .header__searchContainer {
     width: 55%;
-    
+    position: relative;
 }
 
 .header__search {
@@ -28,6 +28,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 24px;
+   
 }
 
 .header__searchInput {
@@ -37,15 +38,21 @@
     width: 100%;
 }
 
-.header__searchSuggestions {
-    width: 50%;
-    cursor: pointer;
-    padding: 10px 10px;
-    border-radius: 5px;
-    background-color: white;
+.header__searchSuggestionsContainer {
+    width:100%;
     display: flex;
     flex-direction: column;
     position: absolute;
+
+  /*top: (how much pixles from the top you want)px*/
+    top:100%;
+}
+
+.header__searchSuggestions {
+    width: 100%;
+    cursor: pointer;
+    padding: 10px 10px;
+    background-color: white;
 }
 
 .header__searchSuggestions:hover {
