Made a few corrections in the design and stripe functionality

--- a/amazon-react/src/Payment.css
+++ b/amazon-react/src/Payment.css
@@ -1,6 +1,9 @@
-
+.payment {
+    min-height: 70vh;
+}
 
 .payment__container {
+    height: 70vh;
     color: black;
     background-color: white;
 }
