--- a/amazon-react/src/Orders.css
+++ b/amazon-react/src/Orders.css
@@ -1,7 +1,12 @@
 .orders {
+    min-height: 70vh;
     padding: 20px 80px;
 }
 
 .orders > h1 {
     margin: 30px 0;
+}
+
+.order__heading{
+    color: white;
 }
